--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 base = "light"
 primaryColor = "#FF4B4B"
 backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#8D919E"
+secondaryBackgroundColor = "#C5C6D4"
 textColor = "#000000"
