keep hotstox alive edit
hopefully doesn't fail anymore..

--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -9,6 +9,8 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   keepalive:
@@ -25,4 +27,4 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git commit --allow-empty -m "keepalive: $(date)"
-        git push
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
